--- a/instagram-app/src/components/PostContainer/PostContainer.css
+++ b/instagram-app/src/components/PostContainer/PostContainer.css
@@ -39,7 +39,159 @@ article {
 .post-header-container h4 {
     font-size: .9em;
     color: #262626;
-    font-weight: 600;
+    font-weight: 700;
     letter-spacing: .3px;
     margin-left: 15px;
+}
+
+
+/* // ---- Post Content ---- // */
+
+.post-content-container {
+    background-color: #efefef;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: auto;
+    min-height: 560px; 
+}
+
+.content-img-container {
+    padding-bottom: 0;
+    margin: 0;
+    display: block;
+    overflow: hidden;
+
+}
+
+.content-img {
+    object-fit: cover;
+    left: 0;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    width: 100%;
+}
+
+
+/* // ---- Comment Like Section ---- // */
+
+.like-container {
+    padding-left: 16px;
+    padding-right: 16px;
+    display: flex;
+    flex-direction: column;
+}
+
+.like-content-container {
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    
+}
+
+.like-content-container:nth-child(1) {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+}
+
+.like-content-container:nth-child(2) {
+    margin-bottom: 10px;
+}
+
+.like-icon {}
+
+.comment-icon {
+    margin-left: 15px;
+}
+
+.share-icon {
+    margin-left: 17px;
+}
+
+.like-content-container h4 {
+    font-size: .9em;
+    color: #262626;
+    font-weight: 700;
+    margin: 0;
+}
+
+
+/* // ---- Comment Section ---- // */
+
+.comment-content-container {
+    padding-left: 16px;
+    padding-right: 16px;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    
+}
+
+.comment-content-container p {
+    margin-top: 0;
+    margin-bottom: 0px;
+}
+
+.comment-content-container h4 {
+    display: inline-block;
+    font-size: .9em;
+    font-weight: 700;
+    letter-spacing: .3px;
+    color: #262626;
+    margin: 0 5px 0 0;
+}
+
+
+/* // ---- Post Time-Stamp ---- // */
+
+.post-time {
+    font-size: .7em;
+    font-weight: 600;
+    letter-spacing: .2px;
+    color: #999999;
+    margin: 5px 0;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+
+/* // ---- Post Time-Stamp ---- // */
+
+.comment-search-container {
+    margin-top: 10px;
+    padding: 10px 16px;
+    border-top: 1px solid #efefef;
+}
+
+.comment-search-container input {
+    -webkit-appearance: none;
+    font-size: 14px;
+    border: none;
+    color: #262626;
+    outline: 0;
+    padding: 3px 0;
+    z-index: 2;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.comment-search-container input::placeholder {
+    font-size: 14px;
+    color: #999999;
 }
