--- a/instagram-app/src/components/PostContainer/PostContainer.css
+++ b/instagram-app/src/components/PostContainer/PostContainer.css
@@ -48,12 +48,11 @@ article {
 /* // ---- Post Content ---- // */
 
 .post-content-container {
-    background-color: #efefef;
+    background-color: #ffffff;
     position: relative;
     display: block;
     width: 100%;
     height: auto;
-    min-height: 560px; 
 }
 
 .content-img-container {
@@ -67,7 +66,6 @@ article {
 .content-img {
     object-fit: cover;
     left: 0;
-    position: absolute;
     top: 0;
     height: 100%;
     -webkit-user-select: none;
