--- a/instagram-app/src/App.css
+++ b/instagram-app/src/App.css
@@ -113,6 +113,29 @@
     position: relative;
 }
 
+.login-img {
+    height: 427px;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    width: 240px;
+}
+
+.img-visible {
+    -webkit-transition: opacity 1.5s ease-in;
+    transition: opacity 1.5s ease-in;
+    z-index: 2;
+    opacity: 1;
+    visibility: visible;
+}
+
+.img-below-visible {
+    opacity: 1;
+    visibility: visible;
+}
+
 .content-right {
     color: #262626;
     -webkit-box-flex: 1;
